# invoice-parsing-poc

./: .gitignore
app/: app.py  llm.py  pyproject.toml
notebook/: Didero - Document AI.ipynb  Didero Invoice Parsing - OpenAI.ipynb
